make all products selected by default

--- a/static/app/gettingStartedDocs/javascript/react.mdx
+++ b/static/app/gettingStartedDocs/javascript/react.mdx
@@ -1,7 +1,9 @@
 import {PRODUCT, ProductSelection} from 'sentry/components/onboarding/productSelection';
 import {useState} from 'react';
 
-<ProductSelection />
+<ProductSelection
+  defaultSelectedProducts={[PRODUCT.PERFORMANCE_MONITORING, PRODUCT.SESSION_REPLAY]}
+/>
 
 ## Install
 
