--- a/static/app/components/core/text/index.mdx
+++ b/static/app/components/core/text/index.mdx
@@ -7,8 +7,9 @@ resources:
   a11y:
     WCAG 1.4.3: https://www.w3.org/TR/WCAG22/#contrast-minimum
     WCAG 1.4.4: https://www.w3.org/TR/WCAG22/#resize-text
+    WCAG 1.4.6: https://www.w3.org/TR/WCAG22/#contrast-enhanced
+    WCAG 1.4.8: https://www.w3.org/TR/WCAG22/#visual-presentation
     WCAG 1.4.12: https://www.w3.org/TR/WCAG22/#text-spacing
-    WAI-ARIA Text: https://www.w3.org/WAI/ARIA/apg/patterns/
 ---
 
 import {Heading, Text} from 'sentry/components/core/text';
