core(flex): better docs

--- a/static/app/components/core/layout/flex.mdx
+++ b/static/app/components/core/layout/flex.mdx
@@ -74,7 +74,9 @@ Simialarly to `Container`, `Flex` inherits all spacing props like `m`, `p`, `mt`
   <div>Item 2</div>
   <div>Item 3</div>
 </Flex>
-``` ### Spacing
+```
+
+### Spacing
 
 Similarly to `Container`, the `Flex` properties like `gap` follow the same spacing system.
 
