flex: revert flex change

--- a/static/app/components/core/layout/flex.mdx
+++ b/static/app/components/core/layout/flex.mdx
@@ -44,14 +44,14 @@ Simialarly to `Container`, `Flex` inherits all spacing props like `m`, `p`, `mt`
 #### Row Direction
 
 <Storybook.Demo>
-  <Flex direction="row" gap="md" justify="space-between" align="center">
+  <Flex direction="row" gap="md" justify="space-between" align="center" padding="md">
     <Card>Item 1</Card>
     <Card>Item 2</Card>
     <Card>Item 3</Card>
   </Flex>
 </Storybook.Demo>
 ```jsx
-<Flex direction="row" gap="md" justify="space-between" align="center">
+<Flex direction="row" gap="md" justify="space-between" align="center" padding="md">
   <div>Item 1</div>
   <div>Item 2</div>
   <div>Item 3</div>
