--- a/static/app/components/core/text/index.mdx
+++ b/static/app/components/core/text/index.mdx
@@ -12,6 +12,7 @@ resources:
     WCAG 1.4.12: https://www.w3.org/TR/WCAG22/#text-spacing
 ---
 
+import {Flex} from 'sentry/components/core/layout';
 import {Heading, Text} from 'sentry/components/core/text';
 import * as Storybook from 'sentry/stories';
 
@@ -226,20 +227,18 @@ Use `monospace` for fixed-width text.
 
 <Storybook.Demo>
   <Storybook.SideBySide vertical>
-    <div
-      style={{marginBottom: '16px', display: 'flex', alignItems: 'center', gap: '16px'}}
-    >
+    <Flex align="center" gap="xl" style={{marginBottom: '16px'}}>
       <Text>1234567890</Text>
       <Text size="sm" variant="muted">
         Regular
       </Text>
-    </div>
-    <div style={{display: 'flex', alignItems: 'center', gap: '16px'}}>
+    </Flex>
+    <Flex align="center" gap="xl">
       <Text monospace>1234567890</Text>
       <Text size="sm" variant="muted">
         Monospace
       </Text>
-    </div>
+    </Flex>
   </Storybook.SideBySide>
 </Storybook.Demo>
 ```jsx
@@ -253,36 +252,30 @@ Use `tabular` for consistent number alignment and `fraction` for diagonal fracti
 
 <Storybook.Demo>
   <Storybook.SideBySide vertical>
-    <div
-      style={{marginBottom: '16px', display: 'flex', alignItems: 'center', gap: '16px'}}
-    >
+    <Flex align="center" gap="xl" style={{marginBottom: '16px'}}>
       <Text>1234567890</Text>
       <Text size="sm" variant="muted">
         Regular numbers
       </Text>
-    </div>
-    <div
-      style={{marginBottom: '16px', display: 'flex', alignItems: 'center', gap: '16px'}}
-    >
+    </Flex>
+    <Flex align="center" gap="xl" style={{marginBottom: '16px'}}>
       <Text tabular>1234567890</Text>
       <Text size="sm" variant="muted">
         Tabular numbers
       </Text>
-    </div>
-    <div
-      style={{marginBottom: '16px', display: 'flex', alignItems: 'center', gap: '16px'}}
-    >
+    </Flex>
+    <Flex align="center" gap="xl" style={{marginBottom: '16px'}}>
       <Text>1/2 3/4 5/8</Text>
       <Text size="sm" variant="muted">
         Regular fractions
       </Text>
-    </div>
-    <div style={{display: 'flex', alignItems: 'center', gap: '16px'}}>
+    </Flex>
+    <Flex align="center" gap="xl">
       <Text fraction>1/2 3/4 5/8</Text>
       <Text size="sm" variant="muted">
         Diagonal fractions
       </Text>
-    </div>
+    </Flex>
   </Storybook.SideBySide>
 </Storybook.Demo>
 ```jsx
