grid: remove order from flex and grid and fix duplicate props

--- a/static/app/components/core/layout/grid.mdx
+++ b/static/app/components/core/layout/grid.mdx
@@ -137,58 +137,22 @@ Example of a responsive grid container that changes from single column on small 
 
 <Storybook.Demo>
   <Grid columns={{xs: '1fr', sm: 'repeat(2, 1fr)', md: 'repeat(3, 1fr)'}} gap="md" p="md">
-    <Container
-      padding="md"
-      border="primary"
-      border="primary"
-      radius="md"
-      background="primary"
-    >
+    <Container padding="md" border="primary" radius="md" background="primary">
       Responsive
     </Container>
-    <Container
-      padding="md"
-      border="primary"
-      border="primary"
-      radius="md"
-      background="primary"
-    >
+    <Container padding="md" border="primary" radius="md" background="primary">
       Grid
     </Container>
-    <Container
-      padding="md"
-      border="primary"
-      border="primary"
-      radius="md"
-      background="primary"
-    >
+    <Container padding="md" border="primary" radius="md" background="primary">
       Layout
     </Container>
-    <Container
-      padding="md"
-      border="primary"
-      border="primary"
-      radius="md"
-      background="primary"
-    >
+    <Container padding="md" border="primary" radius="md" background="primary">
       Items
     </Container>
-    <Container
-      padding="md"
-      border="primary"
-      border="primary"
-      radius="md"
-      background="primary"
-    >
+    <Container padding="md" border="primary" radius="md" background="primary">
       🔥
     </Container>
-    <Container
-      padding="md"
-      border="primary"
-      border="primary"
-      radius="md"
-      background="primary"
-    >
+    <Container padding="md" border="primary" radius="md" background="primary">
       Awesome
     </Container>
   </Grid>
