heading: remove unused imports

--- a/static/app/components/core/text/heading.mdx
+++ b/static/app/components/core/text/heading.mdx
@@ -14,8 +14,7 @@ resources:
     WCAG 2.4.6: https://www.w3.org/TR/WCAG22/#headings-and-labels
 ---
 
-import {Flex} from 'sentry/components/core/layout';
-import {Heading, Text} from 'sentry/components/core/text';
+import {Heading} from 'sentry/components/core/text';
 import * as Storybook from 'sentry/stories';
 
 import types from '!!type-loader!sentry/components/core/text/heading';
